# renamer-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: error.rs  lib.rs  processor.rs
src/processor/: delimiter.rs  extractor.rs  format.rs  inputs.rs  rename.rs  replacer.rs  selector.rs  trim.rs
tests/: processor_tests.rs  processor_text_input.rs
