[package]
name = "renamer-rs"
version = "0.0.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2024"
rust-version = "1.85"
description = "Library to process and rename files or text"
homepage = "https://github.com/kwheelans/renamer-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kwheelans/renamer-rs"

[profile.release]
lto = true
codegen-units = 1
