[package]
name = "renamer-rs"
version = "0.3.0"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me>"]
edition = "2024"
rust-version = "1.85"
description = "A library to process and rename files or text"
homepage = "https://github.com/kwheelans/renamer-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kwheelans/renamer-rs"

[dependencies]
indexmap = "2"
log = "0.4"
regex = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
